<resources>
    <string name="app_name">Calculator</string>
    <string name="clear" translatable="false">C</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="one" translatable="false">1</string>
</resources>
