<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHistory"
        android:layout_width="386dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="100dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonsClick"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonsClick"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonsClick"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonsClick"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonsClick"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonsClick"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonsClick"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonsClick"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonsClick"
        android:text="2"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:onClick="buttonsClick"
        android:text="3"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="buttonsClick"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonsClick"
        android:text="/"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:onClick="buttonsClick"
        android:text="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:onClick="buttonsClick"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buttonsClick"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnSub" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="buttonsClick"
        android:text="="
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnComma"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnComma"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonsClick"
        android:text=","
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHistory" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:onClick="buttonsClick"
        android:text="X"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />
</android.support.constraint.ConstraintLayout>